--- a/client/src/main/resources/client/css/BoardComponent.css
+++ b/client/src/main/resources/client/css/BoardComponent.css
@@ -4,12 +4,12 @@
     -fx-max-height: 510.0;
     -fx-pref-height: 510.0;
     -fx-background-color: #d3dbe8;
-    -fx-padding: 40 0 0 40;
-    -fx-spacing: 80;
+    -fx-padding: 0;
+    -fx-spacing: 10;
 }
 
-#boardNameLabel{
--fx-font-size:30px;
+#boardNameLabel {
+    -fx-font-size: 30px;
 }
 
 #newListButton {
