Fixed the Tags Flowpane in the Card Overview Component. Ref #117

--- a/client/src/main/resources/client/components/CardComponent.fxml
+++ b/client/src/main/resources/client/components/CardComponent.fxml
@@ -19,7 +19,7 @@
          stylesheets="@../css/CardComponent.css"
          fx:id="cardOverview">
     <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-          AnchorPane.topAnchor="0.0"
+          AnchorPane.topAnchor="0.0" fx:id="vBox"
           styleClass="vbox">
         <HBox maxWidth="Infinity" styleClass="hbox">
             <TitleField fx:id="titleField"/>
