--- a/client/src/main/resources/client/components/CardComponent.fxml
+++ b/client/src/main/resources/client/components/CardComponent.fxml
@@ -16,7 +16,7 @@
 <fx:root type="javafx.scene.layout.AnchorPane"
          xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
-         stylesheets="@./css/CardComponent.css"
+         stylesheets="@../css/CardComponent.css"
          fx:id="cardOverview">
     <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
           AnchorPane.topAnchor="0.0"
