--- a/client/src/main/resources/client/components/TitleField.fxml
+++ b/client/src/main/resources/client/components/TitleField.fxml
@@ -9,7 +9,7 @@
 <fx:root type="AnchorPane"
          xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
          HBox.hgrow="ALWAYS"
-         stylesheets="@./TitleField.css">
+         stylesheets="@../css/TitleField.css">
     <TextField fx:id="textField" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                AnchorPane.rightAnchor="0.0"
                AnchorPane.topAnchor="0.0"/>
