--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -22,7 +22,7 @@
         fx:id="anchorPane"
          xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
-         stylesheets="@/client/scenes/css/CardPopup.css"
+         stylesheets="@/client/css/CardPopup.css"
          prefWidth="500"
          minHeight="400"
          maxWidth="500"
