--- a/client/src/main/resources/client/scenes/CreateBoard.fxml
+++ b/client/src/main/resources/client/scenes/CreateBoard.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.CreateBoardCtrl">
    <children>
-      <TextField fx:id="fieldBoardName" layoutX="89.0" layoutY="169.0" prefHeight="26.0" prefWidth="302.0" promptText="Enter a title." />
+      <TextField fx:id="fieldBoardName" layoutX="89.0" layoutY="169.0" prefHeight="26.0" prefWidth="302.0" promptText="Enter a title." onAction="#clickCreateBoard"/>
       <Label layoutX="153.0" layoutY="83.0" text="Create a New Board">
          <font>
             <Font size="18.0" />
