--- a/client/src/main/resources/client/scenes/BoardSettings.fxml
+++ b/client/src/main/resources/client/scenes/BoardSettings.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.BoardSettingsCtrl">
     <children>
-   <TextField fx:id="fieldBoardName" layoutX="34.0" layoutY="29.0" prefHeight="26.0" prefWidth="206.0" />
+   <TextField fx:id="fieldBoardName" layoutX="34.0" layoutY="29.0" onAction="#madeChange" prefHeight="26.0" prefWidth="206.0" />
       <Line endX="437.800048828125" endY="-1.52587890625E-5" layoutX="131.0" layoutY="72.0" startX="-100.0" />
       <Label layoutX="30.0" layoutY="98.0" prefHeight="18.0" prefWidth="78.0" text="Board colors:" />
       <Label layoutX="331.0" layoutY="98.0" prefHeight="18.0" prefWidth="61.0" text="List colors:" />
@@ -28,19 +28,19 @@
       <Label layoutX="30.0" layoutY="227.0" text="Card color schemes:" />
       <Label layoutX="168.0" layoutY="228.0" text="B:" />
       <Label layoutX="193.0" layoutY="228.0" text="F:" />
-      <ColorPicker fx:id="cpBackgroundBoard" layoutX="143.0" layoutY="134.0" prefHeight="26.0" prefWidth="38.0">
+      <ColorPicker fx:id="cpBackgroundBoard" layoutX="143.0" layoutY="134.0" onAction="#madeChange" prefHeight="26.0" prefWidth="38.0">
          <value>
             <Color red="0.729411780834198" green="0.729411780834198" blue="0.729411780834198" />
          </value></ColorPicker>
-      <ColorPicker fx:id="cpFontBoard" layoutX="143.0" layoutY="167.0" prefHeight="26.0" prefWidth="38.0">
+      <ColorPicker fx:id="cpFontBoard" layoutX="143.0" layoutY="167.0" onAction="#madeChange" prefHeight="26.0" prefWidth="38.0">
          <value>
             <Color />
          </value></ColorPicker>
-      <ColorPicker fx:id="cpFontLists" layoutX="432.0" layoutY="167.0" prefHeight="26.0" prefWidth="38.0">
+      <ColorPicker fx:id="cpFontLists" layoutX="432.0" layoutY="167.0" onAction="#madeChange" prefHeight="26.0" prefWidth="38.0">
          <value>
             <Color />
          </value></ColorPicker>
-      <ColorPicker fx:id="cpBackgroundLists" layoutX="432.0" layoutY="135.0" prefHeight="26.0" prefWidth="38.0">
+      <ColorPicker fx:id="cpBackgroundLists" layoutX="432.0" layoutY="135.0" onAction="#madeChange" prefHeight="26.0" prefWidth="38.0">
          <value>
             <Color red="0.8705882430076599" green="0.8705882430076599" blue="0.8705882430076599" />
          </value></ColorPicker>
@@ -50,7 +50,7 @@
             <Image url="https://cdn-icons-png.flaticon.com/512/860/860829.png" />
          </ImageView>
       </Button>
-      <ScrollPane layoutX="30.0" layoutY="249.0" prefHeight="115.0" prefWidth="278.0" hbarPolicy="NEVER">
+      <ScrollPane hbarPolicy="NEVER" layoutX="30.0" layoutY="249.0" prefHeight="115.0" prefWidth="278.0">
         <content>
 <!--          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="114.0" prefWidth="258.0">-->
 <!--               <children>-->
