Fixed the Board Customization Settings. Restyled the Board Customization Popup. Ref #130

--- a/client/src/main/resources/client/css/CardPopup.css
+++ b/client/src/main/resources/client/css/CardPopup.css
@@ -59,5 +59,10 @@
     -fx-cursor: hand;
 }
 
+.menu-button > .arrow-button {
+    -fx-padding: 0;
+}
 
-
+.menu-button > .arrow-button > .arrow {
+    -fx-padding: 0;
+}
