--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -1,40 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Text?>
-
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.ScrollPane?>
-
-<?import javafx.scene.paint.Color?>
-<AnchorPane
-        fx:id="anchorPane"
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
+<fx:root type="AnchorPane"
+         fx:id="anchorPane"
          xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          stylesheets="@/client/css/CardPopup.css"
          prefWidth="500"
-         minHeight="400"
-         maxWidth="500"
+         prefHeight="400"
          maxHeight="Infinity">
     <TextField fx:id="cardTitle" layoutX="10" layoutY="10"/>
-    <TextField fx:id="cardDescription" layoutX="10" layoutY="40" prefHeight="80" prefWidth="480" alignment="TOP_LEFT"/>
+    <TextField fx:id="cardDescription" layoutX="10" layoutY="40" prefHeight="80" prefWidth="480"
+               alignment="TOP_LEFT"/>
     <Text layoutX="10" layoutY="140">Tasks:</Text>
     <ScrollPane layoutX="10" layoutY="151" prefHeight="130" prefWidth="480">
-        <VBox fx:id="subtaskVBox" styleClass="vbox" />
+        <VBox fx:id="subtaskVBox" styleClass="vbox"/>
     </ScrollPane>
     <HBox fx:id="subtaskHBox"/>
     <ScrollPane layoutX="10" layoutY="320" prefHeight="45" prefWidth="480">
         <HBox fx:id="tagHBox"/>
     </ScrollPane>
-</AnchorPane>
+    <ChoiceBox fx:id="colorSchemeDropdown"/>
+</fx:root>
