--- a/client/src/main/resources/client/scenes/BoardSettings.fxml
+++ b/client/src/main/resources/client/scenes/BoardSettings.fxml
@@ -45,10 +45,7 @@
             <Color red="0.8705882430076599" green="0.8705882430076599" blue="0.8705882430076599" />
          </value></ColorPicker>
       <Button layoutX="470.0" layoutY="29.0" mnemonicParsing="false" onAction="#save" text="Save" />
-      <Button layoutX="543.0" layoutY="28.0" mnemonicParsing="false" onAction="#deleteBoard" prefHeight="25.0" prefWidth="25.0">
-         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="https://cdn-icons-png.flaticon.com/512/860/860829.png" />
-         </ImageView>
+      <Button layoutX="543.0" layoutY="28.0" mnemonicParsing="false" onAction="#deleteBoard" prefHeight="25.0" prefWidth="25.0" text="X">
       </Button>
       <ScrollPane hbarPolicy="NEVER" layoutX="30.0" layoutY="249.0" prefHeight="115.0" prefWidth="278.0">
         <content>
