--- a/client/src/main/resources/client/scenes/HomeScene.fxml
+++ b/client/src/main/resources/client/scenes/HomeScene.fxml
@@ -23,5 +23,5 @@
       </graphic>
       <tooltip><Tooltip text="Return to ServerConnection page" /></tooltip>
    </Button>
-   <Button layoutX="58.0" layoutY="27.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="237.0" onAction="#adminClick" text="Enable Admin Mode" />
+   <Button fx:id="buttonAdmin" layoutX="58.0" layoutY="27.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="237.0" onAction="#adminClick" text="Enable Admin Mode" />
 </AnchorPane>
