--- a/client/src/main/resources/client/scenes/BoardScene.fxml
+++ b/client/src/main/resources/client/scenes/BoardScene.fxml
@@ -26,7 +26,7 @@
             <Button fx:id="backHomeBTN" onAction="#backToHome">
                 <graphic>
                     <ImageView fx:id="myImage" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@/images/home.png"/>
+                        <Image url="@/client/images/home.png"/>
                     </ImageView>
                 </graphic>
                 <tooltip><Tooltip text="Return to Homepage" /></tooltip>
@@ -40,7 +40,7 @@
             <Button fx:id="shareBTN" onAction="#share">
                 <graphic>
                     <ImageView fx:id="myImage2" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                            <Image url="@/images/sharefinal.png">
+                            <Image url="@/client/images/sharefinal.png">
                         </Image>
                     </ImageView>
                 </graphic>
@@ -49,7 +49,7 @@
             <Button fx:id="settingsBTN" onAction="#settings" >
                 <graphic>
                     <ImageView fx:id="myImage3" fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@/images/ellipsis.png">
+                        <Image url="@/client/images/ellipsis.png">
                         </Image>
                     </ImageView>
                 </graphic>
