Board deletion sync using long-polling

--- a/client/src/main/resources/client/scenes/BoardSettings.fxml
+++ b/client/src/main/resources/client/scenes/BoardSettings.fxml
@@ -20,6 +20,7 @@
          xmlns:fx="http://javafx.com/fxml/1"
          style="-fx-padding: 20"
          stylesheets="@/client/css/BoardCustomizationPopup.css"
+         fx:id="anchorPane"
 >
     <VBox AnchorPane.bottomAnchor="0.0"
           AnchorPane.leftAnchor="0.0"
