--- a/client/src/main/resources/client/scenes/ShareBoard.fxml
+++ b/client/src/main/resources/client/scenes/ShareBoard.fxml
@@ -4,20 +4,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="648.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ShareBoardCtrl">
+<AnchorPane prefHeight="300.0" prefWidth="648.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.ShareBoardCtrl">
     <children>
 
-        <Label layoutX="66.0" layoutY="37.0" text="Share this board with other people by giving them a code">
+        <Label layoutX="66.0" layoutY="37.0"
+               text="Share this board with other people by giving them this code">
             <font>
-                <Font size="18.0" />
+                <Font size="18.0"/>
             </font>
         </Label>
 
-        <TextField fx:id="fieldReadOnlyCode" editable="false" layoutX="173.0" layoutY="107.0" prefHeight="26.0" prefWidth="353.0" />
-        <Button fx:id="btnCopyReadOnlyCode" layoutX="527.0" layoutY="107.0" mnemonicParsing="false" onAction="#copyReadOnlyCode" prefHeight="26.0" prefWidth="90.0" text="Copy" />
-        <TextField fx:id="fieldCode" editable="false" layoutX="173.0" layoutY="173.0" prefHeight="26.0" prefWidth="353.0" />
-        <Button fx:id="btnCopyCode" layoutX="527.0" layoutY="173.0" mnemonicParsing="false" onAction="#copyCode" prefHeight="26.0" prefWidth="90.0" text="Copy" />
-      <Label layoutX="48.0" layoutY="111.0" text="Read Only Code" />
-      <Label layoutX="20.0" layoutY="178.0" text="Read and Write Code" />
+        <TextField fx:id="fieldCode" editable="false" layoutX="173.0" layoutY="173.0"
+                   prefHeight="26.0" prefWidth="353.0"/>
+        <Button fx:id="btnCopyCode" layoutX="527.0" layoutY="173.0" mnemonicParsing="false"
+                onAction="#copyCode" prefHeight="26.0" prefWidth="90.0" text="Copy"/>
     </children>
 </AnchorPane>
