A few fixes for the keyboard shortcuts

--- a/client/src/main/resources/client/css/CardComponent.css
+++ b/client/src/main/resources/client/css/CardComponent.css
@@ -1,5 +1,11 @@
 @import url(./Common.css);
 
+/*root {
+    -fx-border-width: 3;
+    -fx-border-color: red;
+    -fx-padding: 5;
+}*/
+
 #cardOverview {
     -fx-padding: 10;
     -fx-border-radius: 5;
