--- a/client/src/main/resources/client/scenes/TagManagement.fxml
+++ b/client/src/main/resources/client/scenes/TagManagement.fxml
@@ -5,16 +5,16 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.TagManagementCtrl">
    <children>
-      <ScrollPane layoutX="46.0" layoutY="141.0" prefHeight="230.0" prefWidth="350.0" hbarPolicy="NEVER">
+      <ScrollPane hbarPolicy="NEVER" layoutX="46.0" layoutY="141.0" prefHeight="230.0" prefWidth="350.0">
          <content>
             <VBox fx:id="tagsBox" layoutX="1.0" layoutY="-2.0" prefHeight="115.0" prefWidth="262.0" />
          </content>
       </ScrollPane>
       <TextField fx:id="fieldTagTitle" layoutX="46.0" layoutY="37.0" onKeyPressed="#tagTitleKeyPress" prefHeight="26.0" prefWidth="173.0" promptText="Tag title" />
       <Button fx:id="buttonCreateTag" layoutX="46.0" layoutY="79.0" mnemonicParsing="false" onAction="#createTag" text="Create Tag" />
-      <ColorPicker fx:id="pickerForeground" layoutX="308.0" layoutY="36.0" prefHeight="26.0" prefWidth="45.0" />
-      <ColorPicker fx:id="pickerBackground" layoutX="458.0" layoutY="37.0" prefHeight="26.0" prefWidth="46.0" />
-      <Label layoutX="234.0" layoutY="41.0" text="Foreground" />
-      <Label layoutX="381.0" layoutY="40.0" text="Background" />
+      <ColorPicker fx:id="pickerBackground" layoutX="308.0" layoutY="36.0" prefHeight="26.0" prefWidth="45.0" />
+      <ColorPicker fx:id="pickerForeground" layoutX="458.0" layoutY="37.0" prefHeight="26.0" prefWidth="46.0" />
+      <Label layoutX="234.0" layoutY="41.0" text="Background" />
+      <Label layoutX="381.0" layoutY="40.0" text="Foreground" />
    </children>
 </AnchorPane>
